practice-yamls/sidecar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: synergy-leverager
  name: synergy-leverager
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: synergy-leverager
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: synergy-leverager
    spec:
      containers:
      - command:
        - sh
        - -c
        - while true; do echo "logging" >> /opt/logs.txt; sleep 1; done
        image: alpine:latest
        imagePullPolicy: Always
        name: synergy-leverager
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt
          name: data
      - command:
        - sh
        - -c
        - tail -n+1 -f /opt/logs.txt
        name: sidecar
        image: busybox:latest
        volumeMounts:
        - mountPath: /opt
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: data
